# duck-bin

./: .gitignore  Cargo.toml  hot_reload.sh
db/: content_db.sql  setup_db.sh  user_db.sql
resources/js/: hot_reload.js
src/: data.rs  hot_reload.rs  main.rs  util.rs
src/middleware/: user.rs
templates/: base.html  content.html  index.html  login.html
