[package]
name = "duck-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.13.5", optional = true }
actix-files = "0.6.6"
actix-web = "4"
actix-web-actors = { version = "4.3.1", optional = true }
askama = "0.12.1"
chrono = "0.4.38"
futures-util = "0.3.30"
serde = "1.0.204"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio", "chrono"] }

[features]
hot_reload = ["dep:actix", "dep:actix-web-actors"]
